plugins {
    id 'java-library'
    id 'maven-publish'
    id 'net.minecraftforge.gradle' version '[6.0,6.2)'
    id 'org.spongepowered.mixin' version '0.7-SNAPSHOT'
    id 'idea'
}

version = mod_version
group = mod_group_id

base {
    archivesName = mod_artifact_name
}

java.toolchain.languageVersion = JavaLanguageVersion.of(17)

minecraft {
    mappings channel: mapping_channel, version: mapping_version
    copyIdeResources = true
    accessTransformer = file('src/main/resources/META-INF/accesstransformer.cfg')

    runs {
        configureEach {
            workingDirectory project.file(findProperty('run_directory') ?: 'run')
            property 'forge.logging.markers', 'REGISTRIES'
            property 'forge.logging.console.level', 'debug'

            mods {
                "${mod_id}" {
                    source sourceSets.main
                }
            }
        }

        client {
            property 'forge.enabledGameTestNamespaces', mod_id
        }

        server {
            property 'forge.enabledGameTestNamespaces', mod_id
            args '--nogui'
        }

        gameTestServer {
            property 'forge.enabledGameTestNamespaces', mod_id
        }

        data {
            workingDirectory project.file('run-data')
            args '--mod', mod_id, '--all', '--output', file('src/generated/resources/'),
                    '--existing', file('src/main/resources/')
        }
    }
}

mixin {
    add sourceSets.main, "${mod_id}.refmap.json"
    config "${mod_id}.mixins.json"
}

jarJar.enable()

tasks.named('jarJar', Jar).configure {
    archiveClassifier = ''
}

sourceSets.main.resources {
    srcDir 'src/generated/resources'
    exclude '**/*.bbmodel'
    exclude '**/.cache/**'
    exclude 'assets/examplemod/**'
}

repositories {
    maven {
        name = 'Modrinth'
        url = 'https://api.modrinth.com/maven'
        content { includeGroup 'maven.modrinth' }
    }
    maven {
        name = 'CurseMaven'
        url = 'https://www.cursemaven.com'
        content { includeGroup 'curse.maven' }
    }
    maven {
        name = 'ModMaven'
        url = 'https://modmaven.dev/'
    }
    maven {
        name = 'JaredMaven'
        url = 'https://maven.blamejared.com'
    }
    maven {
        name = 'Sponge'
        url = 'https://repo.spongepowered.org/repository/maven-public/'
    }
    mavenCentral()
}

configurations {
    localRuntime
    runtimeClasspath.extendsFrom localRuntime
}

dependencies {
    minecraft "net.minecraftforge:forge:${minecraft_version}-${forge_version}"

    implementation fg.deobf("maven.modrinth:ae2:${ae2_version}")
    implementation fg.deobf("maven.modrinth:glodium:${glodium_version}")
    implementation fg.deobf("maven.modrinth:extended-ae:${extendedae_version}")
    implementation fg.deobf("org.appliedenergistics:guideme:${guideme_version}")
    localRuntime fg.deobf("curse.maven:advancedae-${advancedae_curse_project}:${advancedae_curse_file}")
    localRuntime fg.deobf("curse.maven:geckolib-${geckolib_curse_project}:${geckolib_curse_file}")

    compileOnly fg.deobf("mezz.jei:jei-1.20.1-common-api:${jei_version}")
    compileOnly fg.deobf("mezz.jei:jei-1.20.1-forge-api:${jei_version}")

    compileOnly(annotationProcessor("io.github.llamalad7:mixinextras-common:${mixinextras_version}"))
    localRuntime "io.github.llamalad7:mixinextras-forge:${mixinextras_version}"
    jarJar("io.github.llamalad7:mixinextras-forge:[${mixinextras_version},)") {
        jarJar.pin(it, mixinextras_version)
    }
    annotationProcessor 'org.spongepowered:mixin:0.8.5:processor'
}

tasks.named('processResources', ProcessResources).configure {
    var replaceProperties = [
            minecraft_version      : minecraft_version,
            minecraft_version_range: minecraft_version_range,
            forge_version          : forge_version,
            forge_version_range    : forge_version_range,
            loader_version_range   : loader_version_range,
            mod_id                 : mod_id,
            mod_name               : mod_name,
            mod_license            : mod_license,
            mod_version            : mod_version,
            mod_authors            : mod_authors,
            mod_description        : mod_description,
    ]
    inputs.properties replaceProperties

    filesMatching(['META-INF/mods.toml', 'pack.mcmeta']) {
        expand replaceProperties + [project: project]
    }
}

tasks.named('jar', Jar).configure {
    archiveClassifier = 'slim'
    manifest {
        attributes([
                'Specification-Title'    : mod_id,
                'Specification-Vendor'   : mod_authors,
                'Specification-Version'  : '1',
                'Implementation-Title'   : project.name,
                'Implementation-Version' : project.jar.archiveVersion,
                'Implementation-Vendor'  : mod_authors,
                'MixinConfigs'           : "${mod_id}.mixins.json",
        ])
    }

    includeEmptyDirs = false
    preserveFileTimestamps = false
    reproducibleFileOrder = true
    from('LICENSE.txt')
    from('THIRD_PARTY_NOTICES.md')
    from('CHANGELOG.md')
    finalizedBy 'reobfJar'
}

publishing {
    publications {
        register('mavenJava', MavenPublication) {
            artifact jar
        }
    }
    repositories {
        maven {
            url "file://${project.projectDir}/repo"
        }
    }
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'
    options.compilerArgs += ['-Xmaxerrs', '1000', '-Xdiags:verbose']
}

tasks.withType(ProcessResources).configureEach {
    filteringCharset = 'UTF-8'
    includeEmptyDirs = false
}

idea {
    module {
        downloadSources = true
        downloadJavadoc = true
    }
}